# psychic-tribble

./: .gitignore  CMakeLists.txt  README.md  configure.sh
src/: CMakeLists.txt  ad_operator_templates.h  ad_vector_base.h  ad_vector_bin_expr.h  ad_vector_expr.h  ad_vector_pow.h  ad_vector_unary_expr.h  add.h  adtype.h  generic_op_structs.h  interpreter.h  main.cpp
test/: CMakeLists.txt  ad_vector_setup.h  ad_vector_test.h  ad_vector_test_base.h  ad_vector_test_list.h  main_test.cpp
test/ad_vector_ops/: CMakeLists.txt  ad_vector_add_test.h  ad_vector_mul_test.cpp  ad_vector_mul_test.h  ad_vector_sub_test.cpp  ad_vector_sub_test.h
test/ad_vector_ops/ad_vector_add/: CMakeLists.txt  ad_vector_add_test.h  ad_vector_add_test_base.h
test/ad_vector_ops/ad_vector_div/: CMakeLists.txt  ad_vector_div_test.cpp  ad_vector_div_test.h  ad_vector_div_test_base.h
test/ad_vector_ops/ad_vector_mul/: CMakeLists.txt  ad_vector_mul_test.cpp  ad_vector_mul_test.h  ad_vector_mul_test_base.h
test/ad_vector_ops/ad_vector_sub/: CMakeLists.txt  ad_vector_sub_test.h  ad_vector_sub_test_base.h
test/ad_vector_setup/: CMakeLists.txt  ad_vector_setup.cpp
test/test_compare/: comparison_test.cpp
